# run-editor.rs

./: .rustfmt.toml  Cargo.toml  README.md  check.sh
examples/: edit.rs
src/: error.rs  imp.rs  lib.rs  tests.rs
