[package]
name          = "run-editor"
description   = "Routines to execute user-preferred editor in CLI applications"
version       = "0.1.0"
readme        = "README.md"
categories    = ["text-editors", "command-line-interface"]
keywords      = ["editor", "visual", "environment", "default"]
authors       = ["Michal Nazarewicz <mina86@mina86.com>"]
license       = "MIT OR Apache-2.0"
repository    = "https://github.com/mina86/run-editor.rs"
documentation = "https://docs.rs/run-editor"
edition       = "2018"

[dependencies]
tempfile = { version = "3.3.0", optional = true }

[dev-dependencies]
tempfile = "3.3.0"

[features]
default = ["with_tempfile"]

with_tempfile = ["tempfile"]
